# vsomeip-chat-app

./: .gitignore  CMakeLists.txt  README.md  toolchain-arm64.cmake
client/: chat_client.cpp
config/: client_config.json  server_config.json  user1_config.json  user2_config.json
server/: chat_server.cpp
user1/: chat_user1.cpp
user2/: chat_user2.cpp
